[FIX] properties_field : adapt for dark-mode
Non standard shadow around the popover had to be removed

Black PNG's had to be inverted to white in dark mode otherwise they
were not visible

task-2710677

--- a/addons/web/static/src/views/fields/properties/properties_field.scss
+++ b/addons/web/static/src/views/fields/properties/properties_field.scss
@@ -108,7 +108,6 @@
     // put the popover behind datetime component
     z-index: 1000 !important;
     font-size: inherit;
-    box-shadow: 0 3rem 5rem rgba($black, .18) !important;
     box-sizing: border-box;
     .end-auto {
         display: none;
