--- a/addons/web/static/src/views/fields/properties/property_definition.scss
+++ b/addons/web/static/src/views/fields/properties/property_definition.scss
@@ -27,6 +27,7 @@
         img {
             width: 20px;
             height: 20px;
+            filter: var(--DefinitionType__icon-filter);
         }
 
         .o_input_dropdown {
@@ -37,6 +38,7 @@
                 background-position-x: 0px;
                 background-position-y: 3px;
                 background-size: 20px;
+                background-blend-mode: darken;
             }
         }
     }
